--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,354 @@
-.env
+# Byte-compiled / optimized / DLL files
+# These are created when Python runs and aren't needed in the repository
+__pycache__/
+*.py[cod]
+*$py.class
 
-/venv
+# C extensions
+# In case you ever use compiled Python extensions
+*.so
+
+# Distribution / packaging
+# These directories are created when building Python packages
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+# If you ever compile your bot to an executable
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+# Created when running tests
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+cover/
+
+# Translations
+*.mo
+*.pot
+
+# Django stuff (in case you add a web interface later):
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+
+# Flask stuff (another web framework option):
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+.pybuilder/
+target/
+
+# Jupyter Notebook
+# In case you use notebooks for testing
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+# Python version management
+.python-version
+
+# pipenv
+# Alternative to venv
+Pipfile.lock
+
+# poetry
+# Another Python package manager
+poetry.lock
+
+# PEP 582
+__pypackages__/
+
+# Celery stuff
+celerybeat-schedule
+celerybeat.pid
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+# Your original entries plus common variations
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+# Static type checking
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# pytype static type analyzer
+.pytype/
+
+# Cython debug symbols
+cython_debug/
+
+# IDEs and editors
+# Various IDE project files that shouldn't be shared
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+*.sublime-project
+
+# OS generated files
+# System files that get created automatically
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+desktop.ini
+
+# Bot specific
+# Files your bot might create during operation
+logs/
+*.log
+downloads/
+temp/
+cache/
+
+# Database files
+# In case you add persistent storage later
+*.db
+*.sqlite
+*.sqlite3
+
+# Config files with secrets
+# Any file that might contain sensitive data
+config.json
+secrets.json
+tokens.txt
+
+# Backup files
+*.bak
+*.backup
+*.tmp
+*.temp
+
+# Audio files
+# Downloaded music files shouldn't be in the repo
+*.mp3
+*.mp4
+*.wav
+*.opus
+*.webm
+*.m4a
+
+# Documentation build files
+/docs/_build/
+/docs/.doctrees/
+
+# Package lock files (keep requirements.txt instead)
+package-lock.json
+yarn.lock
+
+# Certificates and keys
+*.pem
+*.key
+*.crt
+*.cer
+*.p12
+
+# Archives
+*.zip
+*.tar.gz
+*.rar
+*.7z
+
+# Local development
+.env.local
+.env.development
+.env.test
+.env.production
+
+# Docker volumes
+docker-volumes/
+.docker/
+
+# Terraform
+*.tfstate
+*.tfstate.backup
+.terraform/
+
+# Coverage reports
+htmlcov/
+.coverage
+coverage.html
+coverage.xml
+*.cover
+
+# Profiling data
+*.prof
+*.lprof
+
+# Virtual environments with different names
+bin/
+include/
+lib64/
+share/
+pyvenv.cfg
+
+# PyCharm
+.idea/
+*.iml
+*.iws
+out/
+
+# Eclipse
+.metadata/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+.loadpath
+.recommenders
+
+# NetBeans
+nbproject/private/
+nbbuild/
+nbdist/
+.nb-gradle/
+
+# VS Code
+.vscode/
+*.code-workspace
+.history/
+
+# Sublime Text
+*.sublime-workspace
+*.sublime-project
+
+# Kate
+*.kate-swp
+
+# Vim
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-rt-v][a-z]
+[._]ss[a-gi-z]
+[._]sw[a-p]
+Session.vim
+.netrwhist
+tags
+[._]*.un~
+
+# Emacs
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+# Windows
+Thumbs.db
+ehthumbs.db
+ehthumbs_vista.db
+*.stackdump
+[Dd]esktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+*.lnk
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# Linux
+*~
+.fuse_hidden*
+.directory
+.Trash-*
+.nfs*
